--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum ratione nemo maxime eveniet cum tenetur ipsam eligendi animi. Ipsum, iste!</p>
 </body>
 </html>
